--- a/src/main/resources/static/partials/detailEvent.html
+++ b/src/main/resources/static/partials/detailEvent.html
@@ -14,6 +14,7 @@
 		       	<h3>{{event.address}}, {{event.venue.city}}</h3>
 		       	<h3><i>Starts at {{event.startDate | date:'medium'}}</i></h3>
 		       	<h3><i>Finishes at {{event.endDate | date:'medium'}}</i></h3>
+		       	<h3>Price: {{event.price}}</h3>
 
 		       	<ul class="row">
 		       	<h3>Tags:</h3>
