--- a/src/main/resources/static/partials/myUpcomingEvents.html
+++ b/src/main/resources/static/partials/myUpcomingEvents.html
@@ -1,3 +1,32 @@
-<body>
-upcoming events
-</body>
+<div class="scroll-thru-me" scroller>
+	<div class="container">
+		<h2>My upcoming events</h2>
+		<h1 class="event-title">{{errormsg}}</h1>
+		<div class="alert alert-danger" ng-show="loading">Loading</div>
+		
+		<span ng-repeat="event in events">
+			<div class="panel panel-defaul">
+				<h1 class="event-title"><strong><a href="#/week/{{event.id}}" class="mylink">{{event.name}}</a></strong></h1>
+				<h4>@{{event.venue.name}}</h4>
+				<h6>{{event.description | limitTo: 100}}...</h6>
+				<h6><i>Starts at {{event.startDate | date:'medium'}}</i></h6>
+				<h6><i>Finishes at {{event.endDate | date:'medium'}}</i></h6>
+			</div>
+		</span>
+		<!-- <span ng-repeat="event in response>
+		  <div class="col-md-4">
+			<div class="panel panel-default">
+				<div class="panel-body">
+					<h1 class="event-title">
+						<strong><a href="#/week/{{event.id}}" class="mylink">{{event.name|limitTo : 28}}</a></strong>
+					</h1>
+					<h4>@{{event.venue.name}}</h4>
+					<h6>{{event.description | limitTo: 100}}...</h6>
+					<h6><i>Starts at {{event.startDate | date:'medium'}}</i></h6>
+					<h6><i>Finishes at {{event.endDate | date:'medium'}}</i></h6>
+
+				</div>
+			</div>
+		</span> -->
+	</div>
+</div>
