--- a/src/main/resources/static/partials/editEvent.html
+++ b/src/main/resources/static/partials/editEvent.html
@@ -9,7 +9,7 @@
 				<h3>Description</h3><textarea rows="5" ng-model="eventDescription" class="form-control" required></textarea>
 
 				<h3>Select venue</h3>
-				<select ng-change="selectVenue(venue)" class="form-control" ng-model="venue" ng-options="venue as venue.venueName for venue in venues">
+				<select ng-change="selectVenue(venue)" class="form-control" ng-model="venue" ng-options="venue as venue.name for venue in venues">
 					<option value="">Select Venue</option>
 				</select><br />
 				
@@ -43,7 +43,10 @@
 		    </div>
 		    
 		</div>
-
+				
+				<h3>Price</h3>
+				<input type="text" placeholder="insert price" class="form-control" ng-model="price">
+				
 				<h3>Tags</h3>
 				<input type="text" placeholder="insert tag" class="form-control" ng-model="nameTag">
 				<button type="button" ng-click="addTag()" class="btn btn-danger btn-sm">add tag</button>
@@ -54,10 +57,9 @@
 						<td><button ng-click="removeTag($index)" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-trash"></span></button></td>
 					</tr>
 				</table>
-
-				<h3>password</h3><input type="password" class="form-control" ng-model="password" required/><br/><br/>
-
-				<button type="submit" id="submit" class="btn btn-danger btn-lg"/>submit</button>
+				
+				<br/>
+				<button type="submit" id="submit" class="btn btn-danger btn-lg"/>Update</button>
 
 			</form>
 			<div class="alert alert-danger" ng-show="loading">Loading</div>
